2023-10-21T16:15:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6598402121 # 1304
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 6 44
* notice: prev accum: outdated-unq outdated-all / unq all: 533 904 / 557 947
* notice: next accum: outdated-unq outdated-all / unq all: 533 904 / 557 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-21]

2023-10-21T08:15:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6596227426 # 1303
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 6 43
* notice: prev accum: outdated-unq outdated-all / unq all: 533 904 / 556 946
* notice: next accum: outdated-unq outdated-all / unq all: 533 904 / 557 947
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-21]

2023-10-20T16:17:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6590198202 # 1301
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 6 42
* notice: prev accum: outdated-unq outdated-all / unq all: 533 904 / 556 945
* notice: next accum: outdated-unq outdated-all / unq all: 533 904 / 556 946
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-20T08:17:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585178022 # 1300