@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-21T16:15:54Z",
+  "timestamp" : "2023-10-22T01:05:05Z",
   "count_outdated" : 904,
   "uniques_outdated" : 533,
-  "count" : 948,
+  "count" : 949,
   "uniques" : 557,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
